--- a/yelb-ui/clarity-seed-newfiles/src/index.html
+++ b/yelb-ui/clarity-seed-newfiles/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <script src="env.js"></script>
     <meta charset="utf-8">
-    <title>Yelb</title>
+    <title>Any Company Travel</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico?v=2">
